gloo-portal/deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-download
  namespace: default
spec:
  selector:
    matchLabels:
      app: api-down
  template:
    metadata:
      labels:
        app: api-down
    spec:
      containers:
        - name: contik
          image: htech7x/flask-download-get-api
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-download
  namespace: default
spec:
  selector:
    app: api-down
  type: NodePort
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
